hotfix: scrolling single line editors css fix for evcouplings having scrollbars on consensus/query/ruler update node-sass

--- a/src/components/AlignmentViewer.scss
+++ b/src/components/AlignmentViewer.scss
@@ -33,7 +33,7 @@ $aceEditorLineHeight: 20px;
 
   .av-widget {
     display: flex;
-    padding: 4px 8px;
+    margin: 4px 8px;
 
     .av-annotation,
     .av-content {
